--- a/public/style.css
+++ b/public/style.css
@@ -63,7 +63,7 @@ body {
 .carousel-container {
     position: relative;
     width: 100%;
-    height: 60vh;
+    height: 70vh;
     overflow: hidden;
     background-color: #eee;
 }
@@ -85,7 +85,7 @@ body {
 
 /* Expertise Section Styling */
 .expertise-section {
-    padding: 4rem 2rem;
+    padding: 4rem 0rem 0rem 2rem;
     text-align: center;
     background-color: #fff;
 }
@@ -159,7 +159,7 @@ body {
     flex: 1;
     padding: 2rem;
     width: 100%;
-    max-width: 1100px;
+    max-width: 1800px;
     margin: 0 auto;
     box-sizing: border-box;
 }
@@ -483,4 +483,8 @@ body {
     .submit-btn {
         width: 100%;
     }
+}
+
+.link-category {
+    margin-left: 10px;
 }
